完成aes重构与测试。重构部分type。

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,5 +7,8 @@ include(GoogleTest)
 
 add_executable(des_test des_test.cpp)
 target_link_libraries(des_test GTest::gtest_main focalors)
-
 gtest_discover_tests(des_test)
+
+add_executable(aes_test aes_test.cpp)
+target_link_libraries(aes_test GTest::gtest_main focalors)
+gtest_discover_tests(aes_test)
