--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/cpp
 {
-	"name": "C++",
+	"name": "C++ & clangd",
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
@@ -26,6 +26,8 @@
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	//"remoteUser": "root"
+
+	// Comment if not using rootless podman
 	"runArgs":["--userns=keep-id"],
 	"containerEnv": {"HOME": "/home/vscode"}
 }
