--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	//"remoteUser": "root"
 
-	// Comment if not using rootless podman
-	"runArgs":["--userns=keep-id"],
-	"containerEnv": {"HOME": "/home/vscode"}
+	// Uncomment if using rootless podman
+	"runArgs": ["--userns=keep-id"],
+	"containerEnv":{"HOME":"/home/vscode"}
 }
