--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,8 @@ include(GoogleTest)
 
 include_directories(include)
 
+add_library(test_lib test.cpp)
+
 add_executable(des_test des_test.cpp)
 target_link_libraries(des_test GTest::gtest_main focalors)
 gtest_discover_tests(des_test)
@@ -10,3 +12,7 @@ gtest_discover_tests(des_test)
 add_executable(aes_test aes_test.cpp)
 target_link_libraries(aes_test GTest::gtest_main focalors)
 gtest_discover_tests(aes_test)
+
+add_executable(ecb_test bcm_test/ecb_test.cpp)
+target_link_libraries(ecb_test GTest::gtest_main focalors test_lib)
+gtest_discover_tests(ecb_test)
