--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,3 +20,7 @@ gtest_discover_tests(ecb_test)
 add_executable(cbc_test bcm_test/cbc_test.cpp)
 target_link_libraries(cbc_test GTest::gtest_main focalors test_lib)
 gtest_discover_tests(cbc_test)
+
+add_executable(ofb_test bcm_test/ofb_test.cpp)
+target_link_libraries(ofb_test GTest::gtest_main focalors test_lib)
+gtest_discover_tests(ofb_test)
