添加CFB模式的实现及相关测试用例

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(LIB_SRCS
     src/bcm/ecb.cpp
     src/bcm/cbc.cpp
     src/bcm/ofb.cpp
+    src/bcm/cfb.cpp
 )
 
 add_library(focalors ${LIB_SRCS})
