添加选项以启用clang-tidy支持

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,12 @@ project(focalors)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-find_program(CLANG_TIDY "clang-tidy")
-if(CLANG_TIDY)
-    set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY}")
+option(ENABLE_CLANG_TIDY "Enable clang-tidy" OFF)
+if (ENABLE_CLANG_TIDY)
+    find_program(CLANG_TIDY "clang-tidy")
+    if(CLANG_TIDY)
+        set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY}")
+    endif()
 endif()
 
 include_directories(include)
