添加VS Code设置以禁用C++ IntelliSense引擎

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,10 @@
 		"vscode": {
 			"extensions": [
 				"llvm-vs-code-extensions.vscode-clangd"
-			]
+			],
+			"settings": {
+				"C_Cpp.intelliSenseEngine": "disabled"
+			}
 		}
 	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
