--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,17 @@
-FROM mcr.microsoft.com/devcontainers/cpp:1-debian-12
+FROM ghcr.io/chenxiex/devcontainer-templates/cpp-extra:1-debian-12
+
+ARG SWITCHMIRROR="mirrors.aliyun.com"
+
+RUN if [ "${SWITCHMIRROR}" != "none" ]; then \
+        curl -sSL https://linuxmirrors.cn/main.sh | bash -s -- \
+        --source ${SWITCHMIRROR} \
+        --protocol https \
+        --use-intranet-source false\
+        --backup true \
+        --upgrade-software false \
+        --clean-cache true \
+        --ignore-backup-tips; \
+    fi
 
 ARG REINSTALL_CMAKE_VERSION_FROM_SOURCE="none"
 
@@ -10,25 +23,9 @@ RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
     fi \
     && rm -f /tmp/reinstall-cmake.sh
 
-ARG SWITCHMIRROR="true"
-
-RUN if [ "${SWITCHMIRROR}" = "true" ]; then \
-        curl -sSL https://linuxmirrors.cn/main.sh | bash -s -- \
-        --source mirrors.tencent.com \
-        --protocol https \
-        --use-intranet-source false\
-        --backup true \
-        --upgrade-software false \
-        --clean-cache true \
-        --ignore-backup-tips; \
-    fi
-
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends clangd clang-tidy clang-format
-
 # [Optional] Uncomment this section to install additional vcpkg ports.
 # RUN su vscode -c "${VCPKG_ROOT}/vcpkg install <your-port-name-here>"
 
 # [Optional] Uncomment this section to install additional packages.
- RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-     && apt-get -y install --no-install-recommends libgtest-dev
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends libgtest-dev
