--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	//"remoteUser": "root"
 
-	// Uncomment if using rootless podman
+	// Comment out if not using rootless podman
 	"runArgs": ["--userns=keep-id"],
 	"containerEnv":{"HOME":"/home/vscode"}
 }
