移除runArgs配置，可通过环境变量达到相同效果

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,4 @@
 {
     "name": "focalors",
-    "image": "ghcr.io/chenxiex/focalors/devcontainer:latest",
-    "runArgs": ["--userns=keep-id"]
+    "image": "ghcr.io/chenxiex/focalors/devcontainer:latest"
 }
